--- a/src/components/footer/style-mobile.scss
+++ b/src/components/footer/style-mobile.scss
@@ -6,7 +6,8 @@
     text-align: center;
     height: fit-content;
     gap: 16px;
-    padding: 25px 4px;
+    padding-top: 25px;
+    padding-bottom: 25px;
     .social-media {
       height: fit-content;
       cursor: pointer;
