--- a/src/components/header/style-mobile.scss
+++ b/src/components/header/style-mobile.scss
@@ -2,7 +2,6 @@
 
 @media only screen and (max-width: 768px) {
   header {
-    padding: 0 8px;
     grid-column-gap: 8px;
     .inner-header {
       .logo {
@@ -28,7 +27,6 @@
 }
 @media only screen and (max-width: 490px) {
   header {
-    padding: 0 24px;
     .inner-header {
       grid-column: 1/13 !important;
       nav {
@@ -38,7 +36,7 @@
       svg.menu-btn {
         display: block;
         align-self: center;
-        margin-right: 5px;
+        margin-right: 5%;
         cursor: pointer;
       }
     }
